Fix index nav overflow hidden

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -83,7 +83,8 @@ hr {
     height: calc-size(auto, size + 10px);
     max-height: 70vh;
     min-height: 25vh;
-    overflow: hidden;
+    overflow-y: auto;
+    scrollbar-width: none;
     margin: 0 auto;
     background-color: rgb(20 20 20 / .5);
     backdrop-filter: url(#rgb-diffract) blur(var(--filterblur));
